k8s/console/jhipster-elasticsearch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jhipster-elasticsearch-master
  namespace: default
  labels:
    component: jhipster-elasticsearch
    role: master
spec:
  serviceName: jhipster-elasticsearch-master
  replicas: 1
  selector:
    matchLabels:
      component: jhipster-elasticsearch
      role: master
  template:
    metadata:
      labels:
        component: jhipster-elasticsearch
        role: master
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - name: jhipster-elasticsearch-master
          image: jhipster/jhipster-elasticsearch:v4.1.0
          resources:
            requests:
              memory: '512Mi'
              cpu: '200m'
            limits:
              memory: '1024Mi'
              cpu: '400m'
          ports:
            - containerPort: 9300
              name: transport
              protocol: TCP
            - containerPort: 9200
              name: http
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /es
            - name: config
              mountPath: /es/config/
      volumes:
        - name: config
          configMap:
            name: es-config
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jhipster-elasticsearch-data
  namespace: default
  labels:
    component: jhipster-elasticsearch
    role: data
spec:
  serviceName: jhipster-elasticsearch-data
  replicas: 1
  selector:
    matchLabels:
      component: jhipster-elasticsearch
      role: data
  template:
    metadata:
      labels:
        component: jhipster-elasticsearch
        role: data
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - name: jhipster-elasticsearch-data
          image: jhipster/jhipster-elasticsearch:v4.1.0
          resources:
            requests:
              memory: '512Mi'
              cpu: '200m'
            limits:
              memory: '1024Mi'
              cpu: '400m'
          ports:
            - containerPort: 9300
              name: transport
              protocol: TCP
            - containerPort: 9200
              name: http
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /es
            - name: config
              mountPath: /es/config/
      volumes:
        - name: config
          configMap:
            name: es-config
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-elasticsearch-client
  namespace: default
  labels:
    component: jhipster-elasticsearch
    role: client
spec:
  replicas: 1
  selector:
    matchLabels:
      component: jhipster-elasticsearch
      role: client
  template:
    metadata:
      labels:
        component: jhipster-elasticsearch
        role: client
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - name: jhipster-elasticsearch-client
          image: jhipster/jhipster-elasticsearch:v4.1.0
          resources:
            requests:
              memory: '512Mi'
              cpu: '200m'
            limits:
              memory: '1024Mi'
              cpu: '400m'
          ports:
            - containerPort: 9300
              name: transport
              protocol: TCP
            - containerPort: 9200
              name: http
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /es
            - name: config
              mountPath: /es/config
      volumes:
        - name: config
          configMap:
            name: es-config
        - name: storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-elasticsearch-discovery
  namespace: default
  labels:
    component: jhipster-elasticsearch
    role: master
spec:
  ports:
    - name: transport
      port: 9300
      targetPort: 9300
      protocol: TCP
  selector:
    component: jhipster-elasticsearch
    role: master
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-elasticsearch-data
  namespace: default
  labels:
    component: jhipster-elasticsearch
    role: data
spec:
  ports:
    - name: transport
      port: 9300
      targetPort: 9300
      protocol: TCP
  selector:
    component: jhipster-elasticsearch
    role: data
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-elasticsearch
  namespace: default
  labels:
    component: jhipster-elasticsearch
    role: client
spec:
  ports:
    - name: http
      port: 9200
      targetPort: 9200
  selector:
    component: jhipster-elasticsearch
    role: client
